Added Text Expiration Feature as per users requests
